--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css" />
     <title>Welcome Page</title>
 </head>
 
@@ -11,11 +12,7 @@
     <div id='root'></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script>
-        const heading = React.createElement("h1",{},"Hello React Bro !!!")
-        const root = ReactDOM.createRoot(document.getElementById("root"))
-        root.render(heading)
-    </script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
