--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id='root'></div>
+    <div id='nesteddiv'></div>
+    <div id='sibdiv'></div>
+    <div id='childdiv'></div>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="./app.js"></script>
