--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <div id='nesteddiv'></div>
     <div id='sibdiv'></div>
     <div id='childdiv'></div>
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="./app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
